Clean up admin panel javascript

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -45,42 +45,6 @@
 <script type="text/javascript">
 	var currentVideoID = 1;
 
-	$(function(){
-	   	$.getJSON("./api/getvidrange/" + currentVideoID.toString() + "/" + (currentVideoID + 49).toString(), function(videos) {
-	   		console.log(videos);
-			$.each(videos, function(key, value) {
-			$('<tr>').append(
-				$('<td>').append(
-					$('<form>').attr({"action": "/admin/remove", "method": "post"}).append(
-						$('<input>').attr({"type": "hidden", "name": "videoID", "value": "value.videoID"}),
-						$('<input>').attr({"type": "submit", "value": "Delete Video"})
-					)
-				),
-				$('<td>').text(value.videoID),
-				$('<td>').html('<img src="http://i.ytimg.com/vi/' + value.videoID + '/default.jpg" />'),
-				$('<td>').text("Title goes here"),
-				$('<td>').text("Views here"),
-				$('<td>').text("Skip goes here"),
-				$('<td>').text("Error goes here")
-			).appendTo( "#videoTable" );
-			});
-	    });
- 	 });
-	 
-	 $('#nextbutton').click(function(){	
-		$('#videoTable tr').remove();
-		currentVideoID += 50;
-		loadNewTable();
-	 });
-	 
-	 $('#previousbutton').click(function(){
-		if(currentVideoID > 50){
-			$('#videoTable tr').remove();
-			currentVideoID -= 50;
-			loadNewTable();
-		}
-	 });
-	 
 	function loadNewTable(){
 			$.getJSON("./api/getvidrange/" + currentVideoID.toString() + "/" + (currentVideoID + 49).toString(), function(videos) {
 				console.log(videos);
@@ -102,6 +66,25 @@
 				});
 			});
 		}
+
+	loadNewTable();
+	 
+	 $('#nextbutton').click(function(){	
+		$('#videoTable tr').remove();
+		currentVideoID += 50;
+		loadNewTable();
+	 });
+	 
+	 $('#previousbutton').click(function(){
+		currentVideoID -= 50;
+		if(currentVideoID < 1){
+			currentVideoID = 1;
+		}
+		$('#videoTable tr').remove();
+			loadNewTable();
+	 });
+	 
+	
 	 
 	function loadNextPage() {
           $.getJSON("./api/getrandomvid", function(vid) {
