Added a menu top ar div and changed styling

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="./css/WeirdStyle.css">
+<div id='cssmenu'>
+<ul>
+	<li class='active'><a href='/'><span>Home</span></a></li>
+    <li><a href='/login'><span>Log In</span></a></li>
+    <li><a href='/register'><span>Register</span></a></li>
+    <li><a href='/about'><span>About Us</span></a></li>
+</ul>
+</div>
 <body>
-	<h1>About Us</h1>
+	<div  id='title' class="titlebox">
+	<t1>About Us!</t1>
+	<!--<h1>About Us</h1>-->
 	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York!</p>
+	</div>
 </body>
 
 
