--- a/public/css/WeirdStyle.css
+++ b/public/css/WeirdStyle.css
@@ -1,13 +1,7 @@
 body {
     color: purple;
-    background-color:#background-color:#556;
-    background-image: linear-gradient(30deg, #223 12%, transparent 12.5%, transparent 87%, #223 87.5%, #223),
-    linear-gradient(150deg, #223 12%, transparent 12.5%, transparent 87%, #223 87.5%, #223),
-    linear-gradient(30deg, #223 12%, transparent 12.5%, transparent 87%, #223 87.5%, #223),
-    linear-gradient(150deg, #223 12%, transparent 12.5%, transparent 87%, #223 87.5%, #223),
-    linear-gradient(60deg, #778 25%, transparent 25.5%, transparent 75%, #778 75%, #778),
-    linear-gradient(60deg, #778 25%, transparent 25.5%, transparent 75%, #778 75%, #778);
-    background-size:80px 140px;
+    background-color: #002247;
+    background-image: url(https://www.transparenttextures.com/patterns/black-thread-light.png);
     background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
     text-align: center ;
     margin: 0;
@@ -92,7 +86,7 @@ t1:hover {
 
     color: #fff;
     text-transform: uppercase;
-    font-family: 'Book Antiqua', cursive;
+    font-family: 'Tahoma', sans-serif;
     font-weight: 700;
     font-size: 32px;
     width: 10%;
@@ -122,7 +116,7 @@ t1:hover {
     background-color: rgba(50, 50, 50, 0.75);
     width: 80%;
     float: center;
-    box-shadow: 0px 0px 10px 10px #120 inset;
+    box-shadow: 0px 0px 10px 10px #000000 inset;
 
 /*
     color: purple;
