Add crawl button to admin panel; Top 10 videos last week

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -13,12 +13,16 @@
 	</span>
 </form>
 
-
 <form action="/admin/remove" method="post" class="pure-form">
 	<span>
 	<label>Video ID:</label>
 	<input type="text" name="videoID"/>
 	<input type="submit" value="Remove" class="pure-button"/>
+	</span>
+</form>
+
+<form action="/admin/crawlreddit" method="get" class="pure-form">
+	<input type="submit" value="Crawl /r/DeepIntoYoutube" class="pure-button"/>
 	</span>
 </form>
 
