Changed title to "The Weird Side of YouTube"
Fixed title to accuratly represent the project

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 </div>
 <body>
 <div  id='title' class="titlebox">
-<t1>The Weird Part of YouTube</t1>
+<t1>The Weird Side of YouTube</t1>
 <br>
 <a class="gobutton" id='gobutt' onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
     document.querySelector('#navbar').style.visibility = 'visible';
