Changed color of body text

--- a/public/css/WeirdStyle.css
+++ b/public/css/WeirdStyle.css
@@ -1,5 +1,5 @@
 body {
-    color: purple;
+    color: white;
     background-color:#556;
     background-image: linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
     linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
