--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script type='text/javascript' src='./js/jQuery.tubeplayer.min.js'></script>
-<link rel="stylesheet" type="text/css" href="./css/WeirdStyle.css">
+<link rel="stylesheet" type="text/css" href="./css/newstyle.css">
 <div id='navbar'>
 <ul>
    <li class='active'><a href='/'><span>Home</span></a></li>
@@ -20,7 +20,6 @@
     <li><a href='/register'><span>Register</span></a></li>
    <% } %>
    <li class='last'><a href='#'><span>About Us</span></a></li>
-   <li><a href='/about'><span>About Us</span></a></li>
 </ul>
 </div>
 <body>
