--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -48,25 +48,31 @@
 
 <script type="text/javascript">
 	var currentVideoID = 1;
+	// XXX TODO make some config file where the user can specify their key
+	// XXX Remove our API key from the repo, and possible switch to OAuth
+	var youtubeAPIKey = "AIzaSyBf-B5_3Iz5a8Ij52BioFPOE4xJLqC9Sy8";
 
 	function loadNewTable(){
 			$.getJSON("/admin/getvidrange/" + currentVideoID.toString() + "/" + (currentVideoID + 49).toString(), function(videos) {
 				console.log(videos);
 				$.each(videos, function(key, value) {
-				$('<tr>').append(
-					$('<td>').append(
-						$('<form>').attr({"action": "/admin/remove", "method": "post"}).append(
-							$('<input>').attr({"type": "hidden", "name": "videoID", "value": "value.videoID"}),
-							$('<input>').attr({"type": "submit", "value": "Delete Video"})
-						)
-					),
-					$('<td>').text(value.videoID),
-					$('<td>').html('<img src="http://i.ytimg.com/vi/' + value.videoID + '/default.jpg" />'),
-					$('<td>').text("Title goes here"),
-					$('<td>').text(value.views),
-					$('<td>').text(value.skips/value.views*100 + "%"),
-					$('<td>').text(value.errorCount/value.views*100 + "%")
-				).appendTo( "#videoTable" );
+					$.getJSON("https://www.googleapis.com/youtube/v3/videos?part=snippet&id=" + value.videoID + "&key=" + youtubeAPIKey, function(data) {
+						console.log(data)
+						$('<tr>').append(
+							$('<td>').append(
+								$('<form>').attr({"action": "/admin/remove", "method": "post"}).append(
+									$('<input>').attr({"type": "hidden", "name": "videoID", "value": "value.videoID"}),
+									$('<input>').attr({"type": "submit", "value": "Delete Video"})
+								)
+							),
+							$('<td>').text(value.videoID),
+							$('<td>').html('<img src="http://i.ytimg.com/vi/' + value.videoID + '/default.jpg" />'),
+							$('<td>').attr("id", "title").text(data.items[0].snippet.title),
+							$('<td>').text(value.views),
+							$('<td>').text(value.skips/value.views*100 + "%"),
+							$('<td>').text(value.errorCount/value.views*100 + "%")
+						).appendTo( "#videoTable" );
+					});
 				});
 			});
 		}
