Added a picture to about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,8 +12,9 @@
 <body>
 	<div  id='title' class="titlebox">
 	<t1>About Us!</t1>
-	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York!</p>
+	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York! The curent team is comprised of Rick, Matt, and Just Mike.</p>
 	</div>
+	<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="rpi_logo" style="width:304px;height:228px;">
 </body>
 
 
