--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,7 +12,15 @@
 <body>
 	<div  id='title' class="titlebox">
 	<t1>About Us!</t1>
-	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York! The curent team is comprised of Rick, Matt, and Just Mike.</p>
+	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. The curent team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include:
+		<ul>
+			<li>Jake Martin</li>
+			<li>Ashwin Raghuraman</li>
+			<li>Alex Metrocavich
+		</ul>
+	If you would like to learn more about RCOS at RPI or any of the oher active projects, visit the following web page:
+	<a href="https://rcos.io">RCOS</a></p>
+
 	</div>
 	<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="rpi_logo" style="width:304px;height:228px;">
 </body>
