--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Video History</title>
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 <!-- <link rel="stylesheet" type="text/css" href="./style.css"> -->
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
