--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -27,7 +27,7 @@
 </form>
 
 <table id="videoTable" cellspacing="5" class="pure-table">
-	<tr>
+	<tr id="tableheader">
 	   <th>Controls</th>
 	   <!-- The stats button should expand and show full statistics for a video.  We can hide some of the stats that show by default, or add more -->
 	   <th>ID</th>
@@ -53,33 +53,33 @@
 	var youtubeAPIKey = "AIzaSyBf-B5_3Iz5a8Ij52BioFPOE4xJLqC9Sy8";
 
 	function loadNewTable(){
-			$.getJSON("/admin/getvidrange/" + currentVideoID.toString() + "/" + (currentVideoID + 49).toString(), function(videos) {
-				$.each(videos, function(key, value) {
-					$('<tr id="' + value.videoID + '">').append(
-						$('<td>').append(
-							$('<form>').attr({"action": "/admin/remove", "method": "post"}).append(
-								$('<input>').attr({"type": "hidden", "name": "videoID", "value": "value.videoID"}),
-								$('<input>').attr({"type": "submit", "value": "Delete Video"})
-							)
-						),
-						$('<td>').text(value.videoID),
-						$('<td>').html('<img src="//i.ytimg.com/vi/' + value.videoID + '/default.jpg" />'),
-						$('<td>').attr("id", "title"),
-						$('<td>').text(value.views),
-						$('<td>').text(value.skips/value.views*100 + "%"),
-						$('<td>').text(value.errorCount/value.views*100 + "%")
-					).appendTo( "#videoTable" );
-					$.getJSON("https://www.googleapis.com/youtube/v3/videos?part=snippet&id=" + value.videoID + "&key=" + youtubeAPIKey, function(data) {
-						$('#videoTable').find('#'+value.videoID).find('#title').text(data.items[0].snippet.title);
-					});
+		$('#videoTable tr').remove(".videoRow");
+		$.getJSON("/admin/getvidrange/" + currentVideoID.toString() + "/" + (currentVideoID + 49).toString(), function(videos) {
+			$.each(videos, function(key, value) {
+				$('<tr id="' + value.videoID + '" class="videoRow">').append(
+					$('<td>').append(
+						$('<form>').attr({"action": "/admin/remove", "method": "post"}).append(
+							$('<input>').attr({"type": "hidden", "name": "videoID", "value": "value.videoID"}),
+							$('<input>').attr({"type": "submit", "value": "Delete Video"})
+						)
+					),
+					$('<td>').text(value.videoID),
+					$('<td>').html('<img src="//i.ytimg.com/vi/' + value.videoID + '/default.jpg" />'),
+					$('<td>').attr("id", "title"),
+					$('<td>').text(value.views),
+					$('<td>').text(value.skips/value.views*100 + "%"),
+					$('<td>').text(value.errorCount/value.views*100 + "%")
+				).appendTo( "#videoTable" );
+				$.getJSON("https://www.googleapis.com/youtube/v3/videos?part=snippet&id=" + value.videoID + "&key=" + youtubeAPIKey, function(data) {
+					$('#videoTable').find('#'+value.videoID).find('#title').text(data.items[0].snippet.title);
 				});
 			});
-		}
+		});
+	}
 
 	loadNewTable();
 	 
 	 $('#nextbutton').click(function(){	
-		$('#videoTable td').remove();
 		currentVideoID += 50;
 		loadNewTable();
 	 });
@@ -89,7 +89,6 @@
 		if(currentVideoID < 1){
 			currentVideoID = 1;
 		}
-		$('#videoTable td').remove();
 			loadNewTable();
 	 });
 </script>
