Display video range on admin panel

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -27,6 +27,7 @@
 </form>
 <br>
 
+<p id="vidRange">No videos loaded</p>
 <input id="previousButtonTop" type="button" value="Previous Page">
 <input id="nextButtonTop" type="button" value="Next Page">
 
@@ -52,11 +53,13 @@
 
 <script type="text/javascript">
 	var currentVideoID = 1;
+	var numVideos = 0;
 	// XXX TODO make some config file where the user can specify their key
 	// XXX Remove our API key from the repo, and possible switch to OAuth
 	var youtubeAPIKey = "AIzaSyBf-B5_3Iz5a8Ij52BioFPOE4xJLqC9Sy8";
 
 	function loadNewTable(){
+		$('#vidRange').text("Showing videos " + currentVideoID.toString() + ' through ' + ((currentVideoID+50 <= numVideos) ? currentVideoID+50 : numVideos).toString() + " of " + numVideos.toString());
 		$('#videoTable tr').remove(".videoRow");
 		$.getJSON("/admin/getvidrange/" + currentVideoID.toString() + "/" + (currentVideoID + 49).toString(), function(videos) {
 			$.each(videos, function(key, value) {
@@ -82,9 +85,18 @@
 	}
 
 	loadNewTable();
+
+	$.getJSON("/api/getnumvids/", function(numVids) {
+		numVideos = numVids.numVids;
+		$('#vidRange').text("Showing videos " + currentVideoID.toString() + ' through ' + ((currentVideoID+50 <= numVideos) ? currentVideoID+50 : numVideos).toString() + " of " + numVideos.toString());
+	});
 	 
 	 $('#nextButtonTop, #nextButtonBottom').click(function(){	
 		currentVideoID += 50;
+		if(currentVideoID > numVideos)
+		{
+			currentVideoID -= 50;
+		}
 		loadNewTable();
 	 });
 	 
