--- a/public/css/WeirdStyle.css
+++ b/public/css/WeirdStyle.css
@@ -19,7 +19,7 @@ background-size: 40px, 29px, 37px, 53px;
 }
 
 
-t1{ /*title font*/
+.t1{ /*title font*/
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
@@ -39,7 +39,7 @@ t1{ /*title font*/
 
 }
 
-t1:hover {
+.t1: hover {
   text-shadow: -3px 0 0 rgb(217,31,38) , -6px 0 0 rgb(226,91,14) , -9px 0 0 rgb(245,221,8) , -12px 0 0 rgb(5,148,68) , -15px 0 0 rgb(2,135,206) , -18px 0 0 rgb(4,77,145) , -21px 0 0 rgb(42,21,113) ;
   -webkit-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
   -moz-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
