--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,49 +1,49 @@
 <!--   Created at: RPI RCOS 2015: Contact information: raghua@rpi.edu, martij@rpi.edu, metrom@rpi.edu, metroa@rpi.edu -->
 <!DOCTYPE html>
 <html>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script type='text/javascript' src='./js/jQuery.tubeplayer.min.js'></script>
-<link rel="stylesheet" type="text/css" href="./css/newstyle.css">
+<head> 
+<title>Weird Side of YouTube</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script type='text/javascript' src='./js/jQuery.tubeplayer.min.js'></script>
+    <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
+</head>
+
+<body>
+ 
 <div id='navbar'>
-<ul>
-   <li class='active'><a href='/'><span>Home</span></a></li>
-   <%if (user) { %>
-    <%if (user.admin) { %>
-      <li><a href='/admin'><span>Admin Panel</span></a></li>
-    <% } %>
+  <ul>
+    <li class='active'><a href='/'><span>Home</span></a></li>
+      <%if (user) { %>
+      <%if (user.admin) { %>
+    <li><a href='/admin'><span>Admin Panel</span></a></li>
+        <% } %>
     <li>
-    <a href="/logout"> Logout </a></li>
+        <a href="/logout"> Logout </a></li>
     <li><p> You are currently logged in as <%= user.username %> </p></li>
-   <% } %>
-   <%if (!user) { %>
+        <% } %>
+        <%if (!user) { %>
     <li><a href='/login'><span>Log In</span></a></li>
     <li><a href='/register'><span>Register</span></a></li>
-   <% } %>
-   <li class='last'><a href='#'><span>About Us</span></a></li>
-</ul>
-</div>
-<body>
-<div  id='title' class="titlebox">
-<t1>The Weird Side of YouTube</t1>
-<br>
-<a class="gobutton" id='gobutt' onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
-    document.querySelector('#navbar').style.visibility = 'visible';
-    document.querySelector('#title').style.visibility = 'hidden';
-    document.querySelector('#gobutt').style.visibility = 'hidden';
-    jQuery('#youtube-player-container').tubeplayer('play');">
-        <span>Get Weird</span>
-</a>
+        <% } %>
+    <li class='last'><a href='#'><span>About Us</span></a></li>
+   </ul>
 </div>
 
-<div  id='youtube-player-container'>
-    <a class="playerbutton" onclick="playNextVid();">
-        <span>Next</span>
-    </a>
-    <br>
-  <a href="#" onClick='jQuery("#youtube-player-container").tubeplayer("play", document.getElementById("videoID").value)'> </a>
+<div id='title'>
+   <h1>Weird Side of YouTube</h1>
 </div>
-    
-</body>
+   
+<div id='youtube-player-container'>
+  <a href="#" onClick='jQuery("#youtube-player-container").tubeplayer("play", document.getElementById("videoID").value)'> 
+  </a> 
+</div>
+
+<div id="playDiv">
+  <a class="playerbutton" onclick="playNextVid();">
+        <span>Next</span>
+  </a>
+</div>
+
 <script type="text/javascript">
         function playNextVid() {
           $.getJSON("./api/getrandomvid", function(vid) {
@@ -66,31 +66,32 @@
 
         jQuery("#youtube-player-container").tubeplayer({
   autoPlay: true,
-	width: "80%", // the width of the player
-	height: 600, // the height of the player
-	allowFullScreen: "true", // true by default, allow user to go full screen
-	initialVideo: "<%= videoID %>", // the video that is loaded into the player
-	preferredQuality: "default",// preferred quality: default, small, medium, large, hd720
-	onPlay: function(id){}, // after the play method is called
-	onPause: function(){}, // after the pause method is called
-	onStop: function(){}, // after the player is stopped
-	onSeek: function(time){}, // after the video has been seeked to a defined point
-	onMute: function(){},
-	onPlayerEnded: function(){
-		playNextVid();
+  width: "80%", // the width of the player
+  height: 550, // the height of the player
+  allowFullScreen: "true", // true by default, allow user to go full screen
+  initialVideo: "<%= videoID %>", // the video that is loaded into the player
+  preferredQuality: "default",// preferred quality: default, small, medium, large, hd720
+  onPlay: function(id){}, // after the play method is called
+  onPause: function(){}, // after the pause method is called
+  onStop: function(){}, // after the player is stopped
+  onSeek: function(time){}, // after the video has been seeked to a defined point
+  onMute: function(){},
+  onPlayerEnded: function(){
+    playNextVid();
         },
-	onPlayerPlaying: function(){
-		var theatrebox = document.querySelector("#theatre-box");
-		theatrebox.style.visibility = "visibile";
-
-
-		var title = document.querySelector("#title");
-		title.style.visibility = "hidden";
-	}, // after the player is muted
-	onUnMute: function(){}, // after the player is unmuted
+  onPlayerPlaying: function(){
+    var theatrebox = document.querySelector("#theatre-box");
+    var title = document.querySelector("#title");
+    title.style.visibility = "visible";
+  }, // after the player is muted
+  onUnMute: function(){}, // after the player is unmuted
         // Error State Specific Functionality
-	onErrorNotFound: function(){playNextVid();}, // if a video cant be found
-	onErrorNotEmbeddable: function(){playNextVid();}, // if a video isnt embeddable
-	onErrorInvalidParameter: function(){playNextVid();} // if we've got an invalid param
+  onErrorNotFound: function(){playNextVid();}, // if a video cant be found
+  onErrorNotEmbeddable: function(){playNextVid();}, // if a video isnt embeddable
+  onErrorInvalidParameter: function(){playNextVid();} // if we've got an invalid param
 });</script>
+
+</body>
+
+
 </html>
