--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="./css/WeirdStyle.css">
-<div id='cssmenu'>
-<ul>
-	<li class='active'><a href='/'><span>Home</span></a></li>
-    <li><a href='/login'><span>Log In</span></a></li>
-    <li><a href='/register'><span>Register</span></a></li>
-    <li><a href='/about'><span>About Us</span></a></li>
-</ul>
+<div id='navbar'>
+	<ul>
+		<li class='active'><a href='/'><span>Home</span></a></li>
+	    <li><a href='/login'><span>Log In</span></a></li>
+	    <li><a href='/register'><span>Register</span></a></li>
+	    <li><a href='/about'><span>About Us</span></a></li>
+	</ul>
 </div>
+
 <body>
-	<div  id='title' class="titlebox">
+	<div  id='title' class="titlebox2">
 	<t1>About Us!</t1>
+	</div>
+
+	<div id='textbody'>
 	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. The curent team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include:
 		<ul>
 			<li>Jake Martin</li>
@@ -20,10 +24,11 @@
 		</ul>
 	If you would like to learn more about RCOS at RPI or any of the oher active projects, visit the following web page:
 	<a href="https://rcos.io">RCOS</a></p>
-
+		<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="rpi_logo" style="width:304px;height:228px;">
 	</div>
-	<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="rpi_logo" style="width:304px;height:228px;">
+
 </body>
+
 
 
 
