--- a/views/history.ejs
+++ b/views/history.ejs
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
+<head> 
 <title>Video History</title>
-<link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+  <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
+  <link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+</head>
+
 <!-- <link rel="stylesheet" type="text/css" href="./style.css"> -->
 <body>
+
+<div id='navbar'>
+  <ul>
+    <li><a href='/'><span>Home</span></a></li>
+    <li><a href='#'><span>About Us</span></a></li>
+    <%if (user) { %>
+      <%if (user.admin) { %>
+        <li><a href='/admin'><span>Admin Panel</span></a></li>
+      <% } %>
+      <li class='active'><a href='/history'><span>View History</span></a></li>
+      <li><a href="/logout"> Logout </a></li>
+      <li><p> Username: <%= user.username %> </p></li>
+    <% } %>
+    <%if (!user) { %>
+      <li><a href='/login'><span>Log In</span></a></li>
+      <li><a href='/register'><span>Register</span></a></li>
+    <% } %>
+   </ul>
+</div>
 
 <table id="videoTable" cellspacing="5" class="pure-table">
 	<tr id="tableheader">
