update about us css

--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -174,13 +174,12 @@ body {
 #textbody {
   text-align: center;
   font-variant: normal;
-  font size: 10px
-  font-weight: lighter
-  margin-left: auto;
-  margin-right: auto;
+  font size: 10px;
+  font-weight: lighter;
+  margin-left: 50px;
+  margin-right: 50px;
   font-family: 'calibri';
   color: #ffffff;
-  text-align: center;
 }
 
 #youtube-player-container {
