--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="./css/WeirdStyle.css">
+<link rel="stylesheet" type="text/css" href="./css/newstyle.css">
 <div id='navbar'>
 	<ul>
 		<li class='active'><a href='/'><span>Home</span></a></li>
@@ -16,14 +16,18 @@
 	</div>
 
 	<div id='textbody'>
-	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. The curent team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include:
-		<ul>
-			<li>Jake Martin</li>
-			<li>Ashwin Raghuraman</li>
-			<li>Alex Metrocavich
-		</ul>
-	If you would like to learn more about RCOS at RPI or any of the oher active projects, visit the following web page:
-	<a href="https://rcos.io">RCOS</a></p>
+		<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. The curent team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include:
+			<ul>
+				<li>Jake Martin</li>
+				<li>Ashwin Raghuraman</li>
+				<li>Alex Metrocavich</li>
+			</ul>
+	
+		If you would like to learn more about RCOS at RPI or any of the oher active projects, visit
+	<a href="https://rcos.io">our web page</a></p>
+	</div>
+
+	<div
 		<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="rpi_logo" style="width:304px;height:228px;">
 	</div>
 
