--- a/views/history.ejs
+++ b/views/history.ejs
@@ -13,7 +13,7 @@
 <div id='navbar'>
   <ul>
     <li><a href='/'><span>Home</span></a></li>
-    <li><a href='#'><span>About Us</span></a></li>
+    <li><a href='/about'><span>About Us</span></a></li>
     <%if (user) { %>
       <%if (user.admin) { %>
         <li><a href='/admin'><span>Admin Panel</span></a></li>
