--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -11,7 +11,7 @@
 <div id='navbar'>
   <ul>
     <li><a href='/'><span>Home</span></a></li>
-    <li><a href='#'><span>About Us</span></a></li>
+    <li><a href='/about'><span>About Us</span></a></li>
     <%if (user) { %>
       <%if (user.admin) { %>
         <li class='active'><a href='/admin'><span>Admin Panel</span></a></li>
