--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 <title>Weird Side of YouTube</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script type='text/javascript' src='./js/jQuery.tubeplayer.min.js'></script>
-    <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
+  <link rel="stylesheet" type="text/css" href="./css/newstyle.css">
 </head>
 
 <body>
@@ -13,19 +13,19 @@
 <div id='navbar'>
   <ul>
     <li class='active'><a href='/'><span>Home</span></a></li>
-      <%if (user) { %>
+    <li><a href='/about'><span>About Us</span></a></li>
+    <%if (user) { %>
       <%if (user.admin) { %>
-    <li><a href='/admin'><span>Admin Panel</span></a></li>
-        <% } %>
-    <li>
-        <a href="/logout"> Logout </a></li>
-    <li><p> You are currently logged in as <%= user.username %> </p></li>
-        <% } %>
-        <%if (!user) { %>
-    <li><a href='/login'><span>Log In</span></a></li>
-    <li><a href='/register'><span>Register</span></a></li>
-        <% } %>
-    <li class='last'><a href='/about'><span>About Us</span></a></li>
+        <li><a href='/admin'><span>Admin Panel</span></a></li>
+      <% } %>
+      <li><a href='/history'><span>View History</span></a></li>
+      <li><a href="/logout"> Logout </a></li>
+      <li><p> Username: <%= user.username %> </p></li>
+    <% } %>
+    <%if (!user) { %>
+      <li><a href='/login'><span>Log In</span></a></li>
+      <li><a href='/register'><span>Register</span></a></li>
+    <% } %>
    </ul>
 </div>
 
