--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -183,10 +183,15 @@ input {
   font-variant: normal;
   font-size: 16px;
   font-weight: lighter;
-  margin-left: 350px;
-  margin-right: 350px;
+  width: 900px;
+  margin-left: 50px;
+  margin-right: 50px;
   font-family: 'calibri';
   color: rgb(240, 240, 240);
+}
+
+.textbox{
+  background-color: rgb(35, 35, 35);
 }
 
 #youtube-player-container {
