--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,12 +20,14 @@
    </ul>
 </div>
 
+<br>
+
 <body>
-	<div  id='title' class="titlebox2">
+	<div  id='title'>
 	<t1>About Us!</t1>
 	</div>
 
-	<div id='textbody'>
+	<div id='textbody' class='textbox'>
 		<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York. The curent team is comprised of Erik Baktis, Matt Zielinski, and Mike Metrocavich. Past members include:
 			<ul>
 				<li>Jake Martin</li>
@@ -37,8 +39,11 @@
 	<a href="https://rcos.io">our web page</a></p>
 	</div>
 
+	<div id="rpi_logo">
+    <img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="" />
+	</div>
 	<div
-		<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/RPI_Engineers.svg" alt="rpi_logo" style="width:304px;height:228px;">
+		< style="width:304px;height:228px;">
 	</div>
 
 </body>
